# work_v2/public/swagger.json
@@ -141,7 +141,7 @@
               "schema": {
                 "type": "object",
                 "properties": {
-                  "nome": {
+                  "name": {
                     "type": "string",
                     "description": "O nome do paciente"
                   }
@@ -207,7 +207,7 @@
                       "id": {
                         "type": "integer"
                       },
-                      "nome": {
+                      "name": {
                         "type": "string"
                       }
                     }
@@ -233,10 +233,19 @@
               "schema": {
                 "type": "object",
                 "properties": {
-                  "nome": {
-                    "type": "string"
+                  "name": {
+                    "type": "string",
+                    "description": "O nome do médico"
+                  },
+                  "specialty_id": {
+                    "type": "integer",
+                    "description": "O ID da especialidade do médico"
                   }
-                }
+                },
+                "required": [
+                  "name",
+                  "specialty_id"
+                ]
               }
             }
           }
@@ -278,7 +287,7 @@
                     "id": {
                       "type": "integer"
                     },
-                    "nome": {
+                    "name": {
                       "type": "string"
                     }
                   }
@@ -313,8 +322,11 @@
               "schema": {
                 "type": "object",
                 "properties": {
-                  "nome": {
+                  "name": {
                     "type": "string"
+                  },
+                  "specialty_id": {
+                    "type": "integer"
                   }
                 }
               }
